deployments/workflow-manager-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-manager-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
  selector:
    component: workflow-manager-service
